# tangerine

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  Makefile  Pipfile  manage.py  pyproject.toml  readme.md  requirements.in  requirements.txt  setup.cfg  setup.py  uwsgi.ini
blog/: admin.py  factories.py  models.py  urls.py  views.py
blog/config/: asgi.py  config.py  local.example.yml  local.yml  settings.py  test_settings.py  urls.py  wsgi.py
blog/migrations/: 0001_initial.py  0002_post_author.py  0003_misc.py  0004_post_trashed.py  0005_auto_20171103_0021.py
blog/tangerine/: admin.py  factories.py  forms.py  models.py  ops.py  urls.py  views.py
blog/templates/: base.html  home.html
blog/templatetags/: tangerine_tags.py
blog/tests/: test_tags.py
django_tangerine.egg-info/: PKG-INFO  SOURCES.txt  dependency_links.txt  requires.txt
docs/: pull_request_template.md
project/: db.sqlite3  urls.py  wsgi.py
project/config/: local.example.py  local.py  settings.py
scripts/: example.py
tangerine/: admin.py  factories.py  feeds.py  forms.py  models.py  ops.py  urls.py  utils.py  views.py
tangerine/fixtures/: about.json  related_links.json
tangerine/migrations/: 0001_initial.py  0002_post_ptype.py  0003_tweak_ptype.py  0004_auto_20171117_0728.py  0007_auto_20171118_1743.py  0009_approvedcommentor.py  0010_config_auto_approve_previous_commentors.py  0013_config_moderation_email.py  0014_auto_20171217_0041.py  0016_auto_20180104_2324.py  0017_config_show_future.py  (+8 more)
templates/: base.html
users/: admin.py  factories.py  models.py  urls.py
(+85 files in other folders)
